re PR c++/18975 (Copying objects with mutable non-static data members)

cp:
	PR c++/18975
	* method.c (do_build_copy_constructor): Refactor. Don't const
	qualify a mutable field.
	(do_build_assign_ref): Likewise.
testsuite:
	PR c++/18975
	* g++.dg/other/synth1.C: New.

From-SVN: r92321